Fix font rendering Bold text wasn't displaying properly on Safari

--- a/site/_includes/styles/base.css
+++ b/site/_includes/styles/base.css
@@ -8,6 +8,7 @@
 :root {
     font-family: "Inter", sans-serif;
     font-size: 1.1rem;
+    font-synthesis: none;
 }
 
 main {
